# my-projects

./: .gitignore  Dockerfile  Makefile  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties
.github/workflows/: cd-prod.yml  cd-test.yml  ci.yml
.sonar/: sonar-project.properties
app/config/: config.yml
app/src/: main.py
app/src/core/: config.py  lifespan.py
tests/: start_test.ps1
tests/plan/: test_main.py
